Update  : force to pdf download in darkmode instead light mode .